# gogdl_rs

./: Cargo.toml
src/: games.rs  lib.rs
src/auth/: auth.rs  constants.rs
src/constants/: constants.rs
src/games/: games_downloader.rs
src/session/: session.rs
src/user/: user.rs
