[package]
name = "gogdl_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
flate2 = "1.1.4"
futures-util = "0.3.31"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = "1.47.1"
